добавлены файлы второй и 3 лабы

--- a/Projects/CudaLab2/CudaLab2.vcxproj
+++ b/Projects/CudaLab2/CudaLab2.vcxproj
@@ -16,6 +16,9 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <CudaCompile Include="File.cu" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{76410671-08C8-4A90-B788-BB03D8F7C27D}</ProjectGuid>
     <RootNamespace>CudaLab2</RootNamespace>
